--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: 개발 일지
-description: 업무 중 생긴 문제 해결과 개발 기록
+title: Dev Notes
+description: 업무 중 생긴 문제 해결과 짬날 때 쓰는 블로그
 theme: jekyll-theme-minimal
 author: yun-ji-cho
