feat : _config.yml baseurl 변경

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Dev Notes
 description: 업무 중 생긴 문제 해결과 짬날 때 쓰는 블로그
-theme: jekyll-theme-minimal
+theme: minima
 author: yun-ji-cho
+baseurl: "/dev-notes"
